--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -5,28 +5,17 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/bg"
     tools:context=".ui.list.ListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recylerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="355dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="370dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/top_three_pillar" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgTop1"
@@ -121,7 +110,7 @@
         android:id="@+id/imageView4"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="130dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.13"
         app:layout_constraintStart_toStartOf="parent"
@@ -132,7 +121,7 @@
         android:id="@+id/imageView3"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="130dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.881"
         app:layout_constraintStart_toStartOf="parent"
@@ -143,16 +132,17 @@
         android:id="@+id/imageView1"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="75dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ld_top_01" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="15dp"
         android:layout_height="15dp"
+        android:layout_marginEnd="3dp"
         app:layout_constraintBottom_toBottomOf="@+id/txtPoint1"
         app:layout_constraintEnd_toStartOf="@+id/txtPoint1"
         app:layout_constraintTop_toBottomOf="@+id/txtTop1"
@@ -162,6 +152,7 @@
         android:id="@+id/imageView7"
         android:layout_width="15dp"
         android:layout_height="15dp"
+        android:layout_marginEnd="3dp"
         app:layout_constraintBottom_toBottomOf="@+id/txtPoint2"
         app:layout_constraintEnd_toStartOf="@+id/txtPoint2"
         app:layout_constraintTop_toBottomOf="@+id/txtTop2"
@@ -171,6 +162,7 @@
         android:id="@+id/imageView8"
         android:layout_width="15dp"
         android:layout_height="15dp"
+        android:layout_marginEnd="3dp"
         app:layout_constraintBottom_toBottomOf="@+id/txtPoint3"
         app:layout_constraintEnd_toStartOf="@+id/txtPoint3"
         app:layout_constraintTop_toBottomOf="@+id/txtTop3"
@@ -180,21 +172,21 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="Leaderboard"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/btnback"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:clickable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
